--- a/VSdocker-compose.yaml
+++ b/VSdocker-compose.yaml
@@ -14,7 +14,7 @@ services:
       - PROXY_DOMAIN=code-server.my.domain #optional
       - DEFAULT_WORKSPACE=/config/workspace #optional
     volumes:
-      - /path/to/appdata/config:/config
+      - /home/tim/docker/code-server/config:/config
     ports:
       - 8443:8443
     restart: unless-stopped
